[package]
name = "keplerian_sim"
description = "A Keplerian orbit library"
license = "GPL-3.0-or-later"
version = "0.2.2"
edition = "2021"
keywords = ["kepler", "orbit", "simulation", "patchedconics", "kerbalspaceprogram"]
categories = ["aerospace::simulation", "simulation", "science"]
include = ["/src", "README.md", "LICENSE", "Cargo.toml", "Cargo.lock", "CREDITS.md"]
repository = "https://github.com/Not-A-Normal-Robot/keplerian-sim"
rust-version = "1.74.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "eccentric_anomaly"
harness = false

[[bench]]
name = "true_anomaly"
harness = false

[[bench]]
name = "tilting"
harness = false

[[bench]]
name = "position"
harness = false

[[bench]]
name = "position_time"
harness = false

[dependencies]
glam = { version = "0.30.1", features = ["serde"] }
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
